--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.3.3
-numpy==1.24.3  # pandas dependency
+pandas==2.0.3
 matplotlib==3.7.2
 reportlab==4.0.4
+setuptools==69.5.1  # Add this line
