--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.3
-pandas==2.2.2  # ← This version works with Python 3.13
+pandas==1.5.3  # Downgrade to stable version
 matplotlib==3.7.2
 reportlab==4.0.4
 setuptools==69.5.1
