--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.3.3
-pandas==1.5.3  # Downgrade to stable version
+pandas==1.5.3
 matplotlib==3.7.2
 reportlab==4.0.4
 setuptools==69.5.1
+wheel==0.43.0  # Add this for better wheel handling
