--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ pandas==1.5.3
 matplotlib==3.7.2
 reportlab==4.0.4
 setuptools==69.5.1
-wheel==0.43.0  # Add this for better wheel handling
+numpy==1.24.3  # ← ADD THIS LINE - compatible with matplotlib 3.7.2
